pii-tools-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: pii-tools
  name: pii-tools
spec:
  progressDeadlineSeconds: 900
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: pii-tools
    spec:
      containers:
      - args:
        - ./init.sh
        image: registry.rare-technologies.com:5050/pii_tools:v2.3.0
        name: pii-tools
        ports:
        - containerPort: 443
          hostIP: 0.0.0.0
        - containerPort: 22
          hostIP: 0.0.0.0
        resources:
          requests:
            memory: "6Gi"
            cpu: "1"
          limits:
            memory: "8Gi"
            cpu: "2"
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
