pii-tools-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: pii-tools
  name: pii-tools
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  - name: "1789"
    port: 1789
    targetPort: 22
  selector:
    io.kompose.service: pii-tools
  type: LoadBalancer
status:
  loadBalancer: {}
