postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: inventory
